fiinished parties verification
