# apps/api/internal/service/page_verifications/page_verifications_service.go
@@ -21,7 +21,7 @@ type UsersService interface {
 
 type PartiesService interface {
 	UpdatePartyIsVerified(ctx context.Context, partyID int16, isVerified bool) error
-	GetPartyInfo(ctx context.Context, partyID pgtype.Int8) *queries.Party
+	GetPartyInfo(ctx context.Context, partyID int16) *queries.PartyWithVerifications
 }
 
 type PageVerificationsService struct {
@@ -51,6 +51,8 @@ func NewPageVerificationsService(
 // VerifyPage assigns a verification badge to a page (user or party) and updates the is_verified flag.
 func (s *PageVerificationsService) VerifyPage(ctx context.Context, forWho string, pageID int64, verificationTypeID int16, actorID int64) (queries.PagesVerified, error) {
 	var userDetails *queries.UserWithPlaces
+	var party *queries.PartyWithVerifications
+
 	switch forWho {
 	case db.PageTypeUser:
 		user, err := s.usersService.GetUserByFakeID(ctx, pageID)
@@ -60,7 +62,8 @@ func (s *PageVerificationsService) VerifyPage(ctx context.Context, forWho string
 		userDetails = &user
 		pageID = user.ID
 	case db.PageTypeParty:
-		if party := s.partiesService.GetPartyInfo(ctx, pgtype.Int8{Int64: pageID, Valid: true}); party == nil {
+		party = s.partiesService.GetPartyInfo(ctx, int16(pageID))
+		if party == nil {
 			return queries.PagesVerified{}, fmt.Errorf("party not found")
 		}
 	default:
@@ -250,8 +253,8 @@ func (s *PageVerificationsService) GetUserDetails(ctx context.Context, fakeID in
 }
 
 // GetPartyDetails retrieves a party's details by their ID
-func (s *PageVerificationsService) GetPartyDetails(ctx context.Context, partyID int64) (*queries.Party, error) {
-	party := s.partiesService.GetPartyInfo(ctx, pgtype.Int8{Int64: partyID, Valid: true})
+func (s *PageVerificationsService) GetPartyDetails(ctx context.Context, partyID int64) (*queries.PartyWithVerifications, error) {
+	party := s.partiesService.GetPartyInfo(ctx, int16(partyID))
 	if party == nil {
 		return nil, fmt.Errorf("party not found")
 	}
